Opened 13 years ago
Closed 8 years ago
#8531 closed bug (fixed)
Invalid replicant handle on input method swither
Reported by: | X512 | Owned by: | korli |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Servers/input_server | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev44058.
In recent Haiku builds (later R1/A3, but much before current revisions) input method switcher has replicant handle [1]. This handle draw incorrectly(looks like Draw() haven't called at all) and replicated switcher isn't functional [2].
I think that input method switcher don't need replicant at all and it should be removed. If someone think that input method switcher replication is useful, then replicant must look correctly and be functional.
BDragger creating code are in "src/servers/input/MethodReplicant.cpp" MethodReplicant constructor.
Attachments (3)
Change History (6)
by , 13 years ago
Attachment: | replicant.png added |
---|
comment:1 by , 13 years ago
Still present in hrev44242.
Patch that removes replicant handle attached.
by , 13 years ago
comment:2 by , 13 years ago
patch: | 0 → 1 |
---|
[1]