Remove replicant handle from input_server; remove obsolete comment

Signed-off-by: Adrien Destugues <pulkomandy@pulkomandy.tk>

Fixes #8531.

Anyone remembers why a replicant dragger was added there on the first
place?